--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ The designs were created to the following widths:
 /* variables 
 ----------------------*/
 
-::root{
+:root{
 	--dark-grey: hsl(0, 0%, 63%);
 	--black: hsl(0, 0%, 0%);
 	--white: hsl(0, 0%, 100%);
@@ -42,7 +42,7 @@ The designs were created to the following widths:
 
 @font-face{
 	font-family: 'League Spartan';
-	src: url('https://fonts.google.com/specimen/League+Spartan');
+	src: url('./fonts/League_Spartan/static/LeagueSpartan-Regular.ttf');
 }
 
 .weight-5{
@@ -57,7 +57,205 @@ The designs were created to the following widths:
 	font-weight: 700;
 }
 
+.space-5 {
+    letter-spacing: .25em;
+    word-spacing: .75em;
+}
+
 body{
 	font-size: 12px;
 	font-family: 'League Spartan';
+	margin: 0;
+}
+
+p{
+	font-weight: 600;
+	line-height: 1.35em;
+	color: var(--dark-grey);
+}
+
+h1{
+	font-size: 38px;
+}
+
+h2{
+	font-size: 14px;
+}
+
+.uppercase{
+	text-transform: uppercase;
+}
+
+a.link-button {
+    letter-spacing: 1em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--black);
+    font-weight: 700;
+    transition:  color 150ms linear;
+}
+
+a.link-button:hover{
+	color: var(--dark-grey);
+}
+
+/* Layout
+-----------------*/
+
+*{
+	max-width: 100%;
+	box-sizing: border-box;
+}
+
+.grid-18{
+	display: grid;
+/*    grid-template-rows: repeat(12, 1fr);*/
+    grid-template-columns: repeat(18, 1fr);	
+}
+
+.grid-center{
+	align-items: center;
+	justify-content: center;
+}
+
+.grid-col-all{
+	grid-column: 1 / -1;
+}
+
+.site {
+    width: 100vw;
+}
+
+.about-section {
+	grid-row: 3;
+    background-color: var(--white);
+}
+
+.slide-image,
+.slide-content,
+.about-text,
+.about-image{
+	grid-column: 1 / -1;
+}
+
+.slide-image{
+	grid-row: 1 / span 1;
+}
+
+.slide-content{
+	margin-inline: auto;
+	width: min(100% - 2em, 26em);
+	padding: 2em 0 5em;
+}
+
+.about-text{
+	width: min(100% - 2em, 31em);
+    margin-inline: auto;
+    padding: 2em 0;
+}
+
+/*.about-text {
+    width: min(100% - 2em, 31em);
+    margin-inline: auto;
+}*/
+
+.slides {
+    grid-row: 1 / 3;
+}
+
+.slide{
+	grid-row: 1 / span all;
+	grid-template-rows: repeat(2, 1fr);
+}
+
+.arrows {
+    grid-column: 15 / span 4;
+    grid-row: -1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-basis: fit-content;
+}
+
+.arrow{
+	width: 100%;
+	aspect-ratio: 1 / 1;
+	background-color: var(--black);
+	color: var(--white);
+	outline: none;
+	border: 0;
+	transition: 150ms linear background-color;
+}
+
+.arrow:hover{
+	background-color: var(--dark-grey);
+}
+
+@media screen and (min-width: 37.5em) {
+
+	.about-image:first-child {
+	    grid-column: 1 / span 6;
+	}
+
+	.about-image:last-child {
+	    grid-column: 13 / span 6;
+	}
+
+	.about-text {
+	    grid-column: 7 / span 6;
+	}
+
+	img.slide-image {
+		grid-row: 1 / -1;
+	    grid-column: 1 / span 10;
+	    width: 100%;
+	}
+
+	.slide-content {
+		grid-row: 1 / -1;
+	    grid-column: 11 / -1;
+	    margin-inline: auto;
+	    width: min(100% - 2em, 26em);
+	}
+	.arrows {
+	    grid-column: 11 / span 2;
+	    grid-row: -1;
+	}
+
+	.slides {
+		align-items: end;
+	}
+}
+
+/* Header
+-----------------*/
+header {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    padding: 5rem;
+    display: flex;
+    align-items: center;
+}
+
+nav.main-nav {
+    display: inline;
+    padding: 0 2rem;
+}
+
+.main-nav a {
+    color: var(--white);
+    padding: .5rem 1rem;
+    text-decoration: none;
+    font-weight: 500;
+    background-image: linear-gradient(0deg, var(--white), var(--white));
+    background-size: 0px 3px;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    transition: background-size 150ms linear;
+}
+
+.main-nav a:hover{
+	background-size: 20px 3px;
 }
