--- a/style.css
+++ b/style.css
@@ -126,12 +126,16 @@ a.link-button:hover{
     width: 100vw;
 }
 
+.width-full{
+	width: 100%;
+}
+
 .about-section {
 	grid-row: 3;
     background-color: var(--white);
 }
 
-.slide-image,
+.slide-image-mobile,
 .slide-content,
 .about-text,
 .about-image{
@@ -192,6 +196,10 @@ a.link-button:hover{
 	background-color: var(--dark-grey);
 }
 
+.slide-image{
+	display:none;
+}
+
 @media screen and (min-width: 37.5em) {
 
 	.about-image:first-child {
@@ -207,6 +215,7 @@ a.link-button:hover{
 	}
 
 	img.slide-image {
+		display:inline-block;
 		grid-row: 1 / -1;
 	    grid-column: 1 / span 10;
 	    width: 100%;
@@ -226,10 +235,14 @@ a.link-button:hover{
 	.slides {
 		align-items: end;
 	}
+	img.slide-image-mobile{
+		display: none;
+	}
 }
 
 /* Header
 -----------------*/
+
 header {
     position: absolute;
     width: 100%;
@@ -258,4 +271,45 @@ nav.main-nav {
 
 .main-nav a:hover{
 	background-size: 20px 3px;
+}
+
+#open-menu{
+	display: none;
+}
+
+@media screen and (max-width: 37.5em){
+	header{
+		padding: 2em 0;
+		align-items: center;
+		justify-content: center;
+	}
+
+	nav.main-nav{
+		position: absolute;
+		top: -10em;
+		background-color: var(--white);
+		padding: 3rem;
+		color: var(--black);
+		width: 100%;
+	}
+
+	nav.main-nav a{
+		color: inherit;
+	}
+
+	.show-menu{
+		top: 0 !important;
+	}
+
+	#close-button,
+	#open-menu{
+		display: inline-block;
+		position: absolute;
+		top: 1.75em;
+		left: 1em;
+		background-color: transparent;
+		outline: none;
+		border: 0;
+	}
+
 }
