--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ a.link-button:hover{
 }
 
 
-button.arrow{
+div.arrow{
 	width: 100%;
 	aspect-ratio: 1 / 1;
 	background-color: var(--black);
@@ -210,9 +210,12 @@ button.arrow{
 	border: 0;
 	padding: 0;
 	transition: background-color 150ms linear;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-button.arrow:hover{
+div.arrow:hover{
 	background-color: var(--very-dark-grey);
 }
 
